--- a/01_LESSON/index.html
+++ b/01_LESSON/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>I'm learning CSS!</p>
+    <h1>CSS Selectors</h1>
+    <h2>Article 1</h2>
+    <p class="gray">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, molestiae fugit nam a molestias est. Quo rerum error nisi vel eum amet beatae animi praesentium maxime vero ab, facilis recusandae?</p>
+    <h2>Article 2</h2>
+    <p id="second">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, molestiae fugit nam a molestias est. <span>La la la la la </span>Quo rerum error nisi vel eum amet beatae animi praesentium maxime vero ab, facilis recusandae?</p>
+    <h2>Article 3</h2>
+    <p class="gray">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, molestiae fugit nam a molestias est. Quo rerum error nisi vel eum amet beatae animi praesentium maxime vero ab, facilis recusandae?</p>
 </body>
 </html>
