--- a/02_LESSON/index.html
+++ b/02_LESSON/index.html
@@ -10,12 +10,14 @@
 <body>
 
 
-    <header>
-        <h1>CSS Units</h1>
+    <header class="container">
+        <h1>CSS Box Model</h1>
     </header>
     
-    <main>    
+    <main class="container">    
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam iste, ullam ipsa eum, saepe consequuntur necessitatibus magni aperiam dolorem doloribus eius earum. Fugit, officiis facilis deleniti rem odio vitae ut.</p>
+
+        <div class="circle"></div>
     </main>
 
 </body>
