--- a/06_LESSON/index.html
+++ b/06_LESSON/index.html
@@ -17,5 +17,8 @@
         <input id="name" type="text" placeholder="Your Name">
         <button>Submit</button>
     </form> -->
+    <p>This is a link to <a href="one.html">page one</a>.</p>
+    <p>This is a link to <a href="two.html">page two</a>.</p>
+    <p>This is a link to <a href="https://www.onet.pl">page two</a>.</p>
 </body>
 </html>
