--- a/06_LESSON/index.html
+++ b/06_LESSON/index.html
@@ -20,5 +20,23 @@
     <p>This is a link to <a href="one.html">page one</a>.</p>
     <p>This is a link to <a href="two.html">page two</a>.</p>
     <p>This is a link to <a href="https://www.onet.pl">page two</a>.</p>
+
+    <main>
+        <article>
+            <h2>Ordered List</h2>
+            <ol  start="3" reversed>
+                <li>Step One</li>
+                <li value="26">Step Two</li>
+                <li>Step Three</li>
+            </ol>
+        </article>
+            <h2>Unordered List</h2>
+            <ul>
+                <li>Step One</li>
+                <li>Step Two</li>
+                <li>Step Three</li>
+            </ul>
+        </article>
+    </main>
 </body>
 </html>
