--- a/10_LESSON/index.html
+++ b/10_LESSON/index.html
@@ -20,5 +20,16 @@
             </ul>
         </nav>
     </main>
+    <section>
+        <div class="block left">Float</div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem odit quaerat tempora alias repudiandae perferendis aliquid non maxime tempore rerum.</p>
+    </section>
+
+    <div class="clear"></div>
+    <p>Exercitationem magnam magni, corrupti earum tenetur commodi dolores expedita inventore? Alias ipsa ducimus nulla necessitatibus commodi quasi debitis asperiores minima.</p>
+    <p>Suscipit, delectus dolorum reprehenderit sed, quo sint inventore rem quidem neque iusto accusamus nisi totam quos molestiae dolores sapiente obcaecati?</p>
+    <div class="block right">Float</div>
+    <p>Et sit ratione facilis molestias earum maxime nemo atque velit consequatur rem, voluptates quo veniam officiis quaerat explicabo praesentium harum!</p>
+    <p>Mollitia animi necessitatibus excepturi maxime illum quod nihil tempore a accusantium labore? Doloremque maiores quia tempore praesentium perferendis qui dolorem.</p>
 </body>
 </html>
