--- a/13_LESSON/index.html
+++ b/13_LESSON/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="outer-container">
+    <!-- <div class="outer-container">
         <div class="inner-container">
             <div class="box absolute">
                 <p>Absolute</p>
@@ -23,6 +23,24 @@
                 <p>Sticky</p>
             </div>
         </div>
-    </div>
+    </div> -->
+    <button class="social">Rocket</button>
+    <section id="one">
+        <header class="blue">Header One</header>
+        <h2>One</h2>
+    </section>
+    <section id="two">
+        <header class="red">Header Two</header>
+        <h2>Two</h2>
+    </section>
+    <section id="three">
+        <header class="green">Header Three</header>
+        <h2>Three</h2>
+    </section>
+    <footer>
+        <a href="#one">One</a>
+        <a href="#two">Two</a>
+        <a href="#three">Three</a>
+    </footer>
 </body>
 </html>
